Trying to debug & troubleshoot- failing.

--- a/Leader/View/Base.lproj/Main.storyboard
+++ b/Leader/View/Base.lproj/Main.storyboard
@@ -57,8 +57,8 @@
                                     <segue destination="uRl-0x-Ttp" kind="show" id="Zj4-zU-dV9"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FpC-cT-Edd">
-                                <rect key="frame" x="116" y="452" width="142" height="132"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FpC-cT-Edd">
+                                <rect key="frame" x="116" y="431" width="157" height="152"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.32314579329999998" green="0.54230574819999999" blue="0.97680455450000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" title="Competitive Events">
@@ -76,7 +76,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Lat-6s-omD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1371" y="-966"/>
+            <point key="canvasLocation" x="1370.4000000000001" y="-966.56671664167925"/>
         </scene>
         <!--About FBLA-->
         <scene sceneID="Xnk-Ye-LZc">
@@ -189,17 +189,21 @@
             </objects>
             <point key="canvasLocation" x="2789.8550724637685" y="-966.29464285714278"/>
         </scene>
-        <!--Item-->
+        <!--Ib Calendar Data Source-->
         <scene sceneID="38T-VX-rDC">
             <objects>
-                <viewController id="fhp-0h-x8w" sceneMemberID="viewController">
+                <viewController title="CalendarViewController" id="fhp-0h-x8w" customClass="CalendarVC" customModule="Leader" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="afu-hB-4Wc">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="fTP-5N-7Bt">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="fTP-5N-7Bt" customClass="JTAppleCalendarView" customModule="JTAppleCalendar">
                                 <rect key="frame" x="0.0" y="20" width="375" height="598"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="598" id="4ol-z6-IIc"/>
+                                    <constraint firstAttribute="width" constant="375" id="Rla-Vr-Uae"/>
+                                </constraints>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Nv1-UZ-32R">
                                     <size key="itemSize" width="50" height="50"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -207,23 +211,44 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="L0M-Io-Oh2">
+                                    <collectionViewCell clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="dateCell" id="L0M-Io-Oh2" customClass="DateCell" customModule="Leader" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
                                             <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Ci-vm-Cd1">
+                                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
                                         </view>
+                                        <constraints>
+                                            <constraint firstItem="4Ci-vm-Cd1" firstAttribute="top" secondItem="L0M-Io-Oh2" secondAttribute="top" id="1lH-Ft-R6K"/>
+                                            <constraint firstAttribute="bottom" secondItem="4Ci-vm-Cd1" secondAttribute="bottom" id="T8h-6V-pB2"/>
+                                            <constraint firstAttribute="trailing" secondItem="4Ci-vm-Cd1" secondAttribute="trailing" id="hqR-f6-Mx9"/>
+                                            <constraint firstItem="4Ci-vm-Cd1" firstAttribute="leading" secondItem="L0M-Io-Oh2" secondAttribute="leading" id="xex-AV-wcQ"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="dateLabel" destination="4Ci-vm-Cd1" id="aHN-qS-nzN"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
+                                <connections>
+                                    <outlet property="ibCalendarDataSource" destination="fhp-0h-x8w" id="zKS-FP-I8W"/>
+                                    <outlet property="ibCalendarDelegate" destination="fhp-0h-x8w" id="a8l-KM-tAx"/>
+                                </connections>
                             </collectionView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="fTP-5N-7Bt" firstAttribute="top" secondItem="b8G-ES-y0z" secondAttribute="top" id="JzI-HD-m35"/>
-                            <constraint firstItem="fTP-5N-7Bt" firstAttribute="trailing" secondItem="b8G-ES-y0z" secondAttribute="trailing" id="QL2-We-xVh"/>
-                            <constraint firstItem="fTP-5N-7Bt" firstAttribute="leading" secondItem="b8G-ES-y0z" secondAttribute="leading" id="VdG-RC-ZL9"/>
-                            <constraint firstItem="fTP-5N-7Bt" firstAttribute="bottom" secondItem="b8G-ES-y0z" secondAttribute="bottom" id="veV-Mf-pLM"/>
+                            <constraint firstItem="fTP-5N-7Bt" firstAttribute="top" secondItem="b8G-ES-y0z" secondAttribute="top" id="1h1-Ja-gC3"/>
+                            <constraint firstItem="fTP-5N-7Bt" firstAttribute="leading" secondItem="b8G-ES-y0z" secondAttribute="leading" id="85w-Sz-iHa"/>
+                            <constraint firstItem="fTP-5N-7Bt" firstAttribute="bottom" secondItem="b8G-ES-y0z" secondAttribute="bottom" id="t5S-aO-Ixz"/>
+                            <constraint firstItem="fTP-5N-7Bt" firstAttribute="trailing" secondItem="b8G-ES-y0z" secondAttribute="trailing" id="wtB-zK-kVa"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="b8G-ES-y0z"/>
                     </view>
